<resources>
    <string name="app_name">CJEM</string>

    <string name="splash_versionName">———— V %1$s ————</string>

    <string name="home_bottomChoose">精选</string>
    <string name="home_bottomCurrent">当期</string>
    <string name="home_bottomPast">往期</string>
    <string name="home_bottomMe">我</string>

    <!--标题-->
    <string name="title_back">返回</string>

    <!--登录界面-->
    <string name="back_ts">退出后，部分模块将无法使用，是否确认退出？</string>
    <string name="login_log">登&#160;&#160;录</string>
    <string name="login_me">登&#160;录</string>
    <string name="login_reg">没有账号?点此注册</string>
    <string name="login_name1">姓 名</string>
    <string name="login_name2">请输入您的姓名</string>
    <string name="login_phone1">手机号</string>
    <string name="login_phone2">请输入您的手机号</string>
    <string name="login_yz1">验证码</string>
    <string name="login_yz2">请输入验证码</string>
    <string name="login_yz3">获取验证码</string>
    <!--注册界面-->
    <string name="register_user">个人信息</string>
    <string name="register_rgs">新用户注册</string>
    <string name="register_sex1">性别</string>
    <string name="register_sex2">请选择您的性别</string>
    <string name="register_email1">邮箱</string>
    <string name="register_email2">请输入您的邮箱</string>
    <string name="register_phone1">手机</string>
    <string name="register_phone2">请输入您的手机号码</string>
    <string name="register_region1">地区</string>
    <string name="register_region2">请选择您所在的地区</string>
    <string name="register_district1">区县</string>
    <string name="register_district2">请输入您所在的区县</string>
    <string name="register_danw1">单位</string>
    <string name="register_danw2">请选择您所在的单位</string>
    <string name="register_danwgrades1">单位等级</string>
    <string name="register_danwgrades2">请选择您的单位等级</string>
    <string name="register_keshi1">科室</string>
    <string name="register_keshi2">请选择您所在的科室</string>
    <string name="register_title1">职称</string>
    <string name="register_title2">请选择您的职称</string>
    <string name="register_post1">职务</string>
    <string name="register_post2">请选择您的职务</string>
    <string name="register_next">注&#160;&#160;册</string>
    <string name="register_bc">保&#160;&#160;存</string>
    <string name="choose_area_first">请先选择您所处的地区哦</string>

    <string name="info_blank">&#160;</string>
    <string name="info_hospital">医院</string>
    <!--搜索-->
    <string name="search_search">搜&#160;&#160;索</string>
    <string name="search_back">取消</string>
    <string name="search_column">栏目</string>
    <string name="search_year">年份</string>
    <string name="search_keyword">关键字</string>
    <string name="search_title">按标题搜索</string>
    <string name="search_author">按作者搜索</string>
    <string name="search_title_keyword">搜索标题关键字</string>
    <string name="search_author_keyword">搜索作者关键字</string>

    <string name="mycollection">我的收藏</string>
    <string name="mycollection_null1">暂无收藏内容</string>
    <string name="mycollection_null2">赶快收藏您喜爱的内容吧</string>
    <string name="choose_piecemeal_text2">&#160;期</string>
    <string name="choose_piecemeal_text3">&#160;▪&#160;</string>
    <string name="choose_piecemeal_text4">人查看</string>


    <!-- 常用 -->
    <string name="pastmoth">&#160;&#160;第&#160;</string>
    <string name="back">退出登录</string>
    <string name="feedback">意见反馈</string>
    <string name="copy">复制</string>
    <string name="delete">删除</string>
    <string name="copy_success">复制成功</string>
    <string name="deleting">正在删除…</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_faile">删除失败</string>
    <string name="fail_reason">失败原因:%1$s</string>
    <string name="httpfail">网络连接失败请稍后重试...</string>

    <string name="choose_title">&#160;&#160;&#160;%1$s</string>

    <string name="me_feedback">http://weixin.incongress.cn/xhy/xhyHtml5/html/feedback.html?userId=%1$s&#038;project=%2$s
</string>
<string name="hospget">http://app.incongress.cn/main.do?getHospitalList=%1$s&#038;cityId=%2$s
</string>
</resources>
