<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cn.incongress.endorcrinemagazine.activity.RegisterActivity">
    <include layout="@layout/activity_title"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:background="@drawable/btn_me_login"
                >
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/login_name1"
                    />
                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/login_name2"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:background="@drawable/btn_me_login"
                >
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/register_sex1"
                    />
                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/register_sex2"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:background="@drawable/btn_me_login"
                >
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/register_email1"
                    />
                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/register_email2"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:background="@drawable/btn_me_login"
                >
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/register_phone1"
                    />
                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/register_phone2"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:background="@drawable/btn_me_login"
                >
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/register_region1"
                    />
                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/register_region2"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:background="@drawable/btn_me_login"
                >
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/register_district1"
                    />
                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/register_district2"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:background="@drawable/btn_me_login"
                >
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/register_danw1"
                    />
                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/register_danw2"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:background="@drawable/btn_me_login"
                >
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/register_danwgrades1"
                    />
                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/register_danwgrades2"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:background="@drawable/btn_me_login"
                >
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/register_keshi1"
                    />
                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/register_keshi2"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:background="@drawable/btn_me_login"
                >
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/register_title1"
                    />
                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/register_title2"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:background="@drawable/btn_me_login"
                >
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/register_post1"
                    />
                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/register_post2"
                    />
            </LinearLayout>

            <Button
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="30dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/register_next"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:background="@drawable/btn_login_activity"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
