<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.incongress.endorcrinemagazine.activity.LoginActivity">
<include layout="@layout/activity_title"/>
    <LinearLayout
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:background="@drawable/btn_me_login"
        >
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:text="@string/login_name1"
            android:gravity="center"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/login_name2"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:background="@drawable/btn_me_login"
        >
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:text="@string/login_phone1"
            android:gravity="center"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/login_phone2"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:background="@drawable/btn_me_login"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:text="@string/login_yz1"
            android:gravity="center"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/login_yz2"
            />
        </LinearLayout>
        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/black"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/login_yz3"
            android:textColor="@color/black"
            android:textSize="16dp"/>
    </LinearLayout>
    <Button
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:layout_marginTop="50dp"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:gravity="center"
    android:text="@string/login_log"
    android:textColor="@color/white"
    android:textSize="20dp"
    android:background="@drawable/btn_login_activity"/>
    <TextView
        android:id="@+id/login_register"
        android:layout_gravity="right"
        android:layout_marginRight="40dp"
        android:layout_marginTop="80dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login_reg"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:background="@null"/>
</LinearLayout>
